# postmarketos-ondev

./: .gitignore  LICENSE  Makefile  README.md  ondev-boot-mount.sh  ondev-boot.sh  ondev-mkfs-btrfs.sh  ondev-prepare-internal-storage.sh  ondev-prepare.sh
calamares/: CMakeLists.txt
calamares/branding/postmarketos/: branding.desc  show.qml
calamares/config/: settings.conf
calamares/config/modules/: shellprocess.conf  unpackfs.conf  welcomeq-pmos.conf
calamares/modules/partitionq/: CMakeLists.txt  Config.cpp  Config.h  PartitionJob.cpp  PartitionJob.h  PartitionQmlViewStep.cpp  PartitionQmlViewStep.h  fde_confirm.qml  fde_pass.qml  install_confirm.qml  install_wait.qml  partitionq.qml  partitionq.qrc
calamares/modules/pmos/: CMakeLists.txt  Config.cpp  Config.h  MobileQmlViewStep.cpp  MobileQmlViewStep.h  UsersJob.cpp  UsersJob.h  default_pin.qml  fde_confirm.qml  fde_pass.qml  pmos.conf  pmos.qml  pmos.qrc  ssh_confirm.qml  ssh_credentials.qml  wait.qml  welcome.qml
calamares/modules/usersq/: CMakeLists.txt  Config.cpp  Config.h  UsersJob.cpp  UsersJob.h  UsersQmlViewStep.cpp  UsersQmlViewStep.h  default_name.qml  default_pin.qml  ssh_confirm.qml  ssh_credentials.qml  usersq.conf  usersq.qml  usersq.qrc
calamares/modules/welcomeq-pmos/: CMakeLists.txt  WelcomeQmlViewStep.cpp  WelcomeQmlViewStep.h  welcomeq-pmos.conf  welcomeq-pmos.qml  welcomeq-pmos.qrc
config/: settings.conf
config/modules/: shellprocess.conf  unpackfs.conf  welcomeq-pmos.conf
foreign-distro/: build.sh
